crates/red_knot_workspace/src/project/snapshots/red_knot_workspace__project__metadata__tests__nested_projects_in_root_project.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: root
---
ProjectMetadata(
  name: Name("project-root"),
  root: "/app",
  configuration: Configuration(
    python_version: None,
    search_paths: SearchPathConfiguration(
      extra_paths: None,
      src_root: None,
      typeshed: None,
      site_packages: None,
    ),
  ),
)
