crates/red_knot_workspace/src/project/snapshots/red_knot_workspace__project__metadata__tests__nested_projects_without_knot_sections.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: sub_project
---
ProjectMetadata(
  name: Name("nested-project"),
  root: "/app/packages/a",
  configuration: Configuration(
    python_version: None,
    search_paths: SearchPathConfiguration(
      extra_paths: None,
      src_root: None,
      typeshed: None,
      site_packages: None,
    ),
  ),
)
