crates/red_knot_workspace/src/project/snapshots/red_knot_workspace__project__metadata__tests__project_with_pyproject.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: project
---
ProjectMetadata(
  name: Name("backend"),
  root: "/app",
  options: Options(
    environment: None,
    src: None,
  ),
)
