crates/red_knot_workspace/src/project/snapshots/red_knot_workspace__project__metadata__tests__project_without_pyproject.snap
---
source: crates/red_knot_workspace/src/project/metadata.rs
expression: project
---
ProjectMetadata(
  name: Name("app"),
  root: "/app",
  configuration: Configuration(
    python_version: None,
    search_paths: SearchPathConfiguration(
      extra_paths: None,
      src_root: None,
      typeshed: None,
      site_packages: None,
    ),
  ),
)
